I forgot to push some stuff. My b

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A clone of Flappy Bird using JS and Electron",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron main.js"
   },
   "repository": {
     "type": "git",
